Fix inline AP PDF rendering
